fix: documentation format errors
